--- a/front page.html
+++ b/front page.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<style>
+    .button {
+        background-color: #f44336;
+        border: none;
+        color: white;
+        padding: 15px 50px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
 </head>
 <body>
+
+
+<button onclick="Lessons()" class="button">Lessons</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+<button  class="button">Button</button>
+
+<script>
+    function Lessons(){
+    window.location.href = "Lessons.html";
+    }
+
+</script>
 
 </body>
 </html>
