--- a/Login.html
+++ b/Login.html
@@ -28,7 +28,7 @@
             let password = document.getElementById("password").value;
 
 
-            document.getElementById("foo").textContent = $password;
+         //   document.getElementById("foo").textContent = password;
         if(password==="EscuchayLee"){
             window.location.href="front page.html";
         }
